welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:40: error: not found: value Colore
	ligne(Color.orange,Colore.blue)
                           ^